--- a/index.html
+++ b/index.html
@@ -1,36 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ptt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
+<!-- CORPO -->
 <body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <!-- CONTAINER -->
+    <div class="container">
+
+      <!-- CARD -->
+      <div class="card-box">
+
+        <!-- IMAGEM -->
+        <div class="img-box">
+
+          <img src="images/image-product-desktop.jpg" alt="Perfume da Gabrielle Essence">
+
+        </div>
+
+        <!-- DESCRIÇÃO -->
+        <div class="description">
+
+          <!-- SUBTÍTULO -->
+          <h2>PERFUME</h2>
+
+            <!-- TÍTULO -->
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+
+          <!-- PARÁGRAFO -->
+          <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+
+          <!--   -->
+          <div class="precos-box">
+
+            <span id="preco">$149.99</span>
+
+            <span id="precoDel"><del>$169.99</del></span>
+
+          </div>
+
+          <!-- BOTÃO -->
+          <div class="button-box">
+
+            <button>
+
+              <img src="images/icon-cart.svg" alt="Imagem Icon Carrinho"> 
+
+              Add to Cart
+
+            </button>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
 </body>
 </html>
