ajustes no layout

--- a/index.html
+++ b/index.html
@@ -19,40 +19,40 @@
     <div class="container">
 
       <!-- CARD -->
-      <div class="card-box">
+      <main class="cardBox">
 
         <!-- IMAGEM -->
-        <div class="card-box__img-box">
+        <div class="cardBox__img">
 
         </div>
 
         <!-- DESCRIÇÃO -->
-        <div class="description">
+        <div class="cardBox__description">
 
           <!-- SUBTÍTULO -->
           <h2>PERFUME</h2>
 
-            <!-- TÍTULO -->
+          <!-- TÍTULO -->
           <h1>Gabrielle Essence Eau De Parfum</h1>
 
           <!-- PARÁGRAFO -->
           <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
-          <!--   -->
-          <div class="precos-box">
+          <!--  PREÇOS -->
+          <div class="precosBox">
 
-            <span class="precos-box__preco">$149.99</span>
+            <span class="precosBox__preco">$149.99</span>
 
-            <span class="precos-box__preco precos-box__preco--antigo">$169.99</span>
+            <span class="precosBox__preco precosBox__preco--antigo">$169.99</span>
 
           </div>
 
           <!-- BOTÃO -->
-          <div class="button-box">
+          <div class="botaoBox">
 
-            <button class="botao">
+            <button class="botaoBox__botao">
 
-              <img src="images/icon-cart.svg" alt="Imagem Icon Carrinho" class="botao__img"> 
+              <img src="images/icon-cart.svg" alt="Imagem Icon Carrinho" class="botaoBox__img"> 
 
               Add to Cart
 
@@ -62,7 +62,7 @@
 
         </div>
 
-      </div>
+      </main>
 
     </div>
 
